# IronBase

./: .editorconfig  .gitignore  .rustfmt.toml  ACD_IMPLEMENTATION_COMPLETE.md  AGENTS.md  AGGREGATION.md  ALGORITHMS.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COLLECTION_DESIGN.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  DESIGN_AUTO_COMMIT.md  DOCJL_MCP_DESIGN.md  DYNAMIC_METADATA_SUMMARY.md  IMPLEMENTATION_ACD.md  IMPLEMENTATION_AGGREGATION.md  IMPLEMENTATION_DELETE.md  IMPLEMENTATION_FIND_OPTIONS.md  IMPLEMENTATION_IMPROVEMENTS.md  IMPLEMENTATION_INDEX.md  IMPLEMENTATION_QUERY_OPTIMIZER.md  IMPLEMENTATION_UPDATE.md  INDEXES.md  INDEX_CONSISTENCY.md  MCP_FINAL_STATUS.md  MCP_SERVER_SUMMARY.md  MongoLite_Architecture.drawio  MongoLite_Architecture_Detailed.drawio  MongoLite_Architecture_Ultra_Detailed.drawio  MongoLite_Quality_Metrics.drawio  PERFORMANCE.md  PERSISTENCE_FIX_COMPLETE.md  PERSISTENCE_FIX_PLAN.md  PHASE1_COMPLETION_REPORT.md  PHASE2_CONTINUATION.md  (+79 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-wheels.yml  dotnet.yml  publish-crates.yml  publish-nuget.yml  rust.yml  test-windows.yml
IronBase.NET/: IronBase.NET.sln  README.md
IronBase.NET/Demo/: Demo.csproj  Program.cs
IronBase.NET/src/IronBase/: IronBase.csproj
IronBase.NET/src/IronBase.Tests/: AggregationTests.cs  BasicTests.cs  BulkOperationTests.cs  DatabaseManagementTests.cs  DurabilityTests.cs  EdgeCaseTests.cs  FindOptionsTests.cs  IndexTests.cs  IronBase.Tests.csproj  NestedDocumentTests.cs  QueryTests.cs  TransactionTests.cs  UpdateTests.cs
IronBase.NET/src/IronBase/Client/: IronBaseClient.cs
IronBase.NET/src/IronBase/Collection/: IronBaseCollection.cs
IronBase.NET/src/IronBase/Cursor/: IronBaseCursor.cs
IronBase.NET/src/IronBase/Database/: IronBaseDatabase.cs
IronBase.NET/src/IronBase/Documents/: BsonDocument.cs
IronBase.NET/src/IronBase/Exceptions/: IronBaseException.cs
IronBase.NET/src/IronBase/Interop/: CollectionHandle.cs  DatabaseHandle.cs  NativeHelper.cs  NativeMethods.g.cs
IronBase.NET/src/IronBase/Query/: Builders.cs  FilterDefinition.cs  UpdateDefinition.cs
IronBase.NET/src/IronBase/Results/: Results.cs
bindings/csharp/: Cargo.toml  build.rs
bindings/csharp/src/: aggregation.rs  collection.rs  crud.rs  cursor.rs  database.rs  error.rs  handles.rs  index.rs  lib.rs  logging.rs  memory.rs  schema.rs  transaction.rs
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
docs/: MCP_COMPLETE_STATUS.md  MCP_IMPLEMENTATION_SUMMARY.md
examples/: 01_basic_crud.py  02_query_operators.py  03_logical_operators.py  04_update_operators.py  05_count_distinct.py  06_real_world_blog.py  ISO17025_cleaned.json  nested_output.json  python_demo.py  python_transactions.py  remove_level_via_api.py
ironbase-cli/: Cargo.toml
ironbase-cli/src/: main.rs
ironbase-core/: Cargo.toml
ironbase-core/benches/: benchmarks.rs
ironbase-core/examples/: debug_read_docjl.rs  nested_memory_profile.rs  strip_level.rs
ironbase-core/fuzz/: Cargo.toml
ironbase-core/fuzz/artifacts/fuzz_wal_bytes/: oom-3da47600e4ce7ea78610e84d6fa745bad28c344f
ironbase-core/fuzz/fuzz_targets/: fuzz_document_parse.rs  fuzz_json_ops.rs  fuzz_query_parser.rs  fuzz_wal_bytes.rs
ironbase-core/src/: aggregation.rs  btree.rs  catalog_serde.rs  collection_core.rs  database.rs  document.rs  durability.rs  error.rs  find_options.rs  index.rs  lib.rs  logging.rs  query.rs  query.rs.backup  query_cache.rs  query_planner.rs  test_auto_commit.rs  transaction.rs  transaction_benchmarks.rs  transaction_integration_tests.rs  transaction_property_tests.rs  value_utils.rs  wal.rs
ironbase-core/src/collection_core/: index_persistence.rs  mod.rs  raw_operations.rs  schema.rs
ironbase-core/src/query/: operators.rs
ironbase-core/src/recovery/: index_replay.rs  mod.rs  operation_replay.rs
ironbase-core/src/storage/: compaction.rs  file_storage.rs  io.rs  memory_storage.rs  metadata.rs  mod.rs  traits.rs
ironbase-core/src/wal/: entry.rs  mod.rs  reader.rs  recovery.rs  writer.rs
ironbase-core/tests/: array_operator_tests.rs  chaos_concurrent_tests.rs  chaos_corruption_tests.rs  chaos_crash_tests.rs  chaos_helpers.rs  collection_core_tests.rs  compaction_tests.rs  debug_nested_index.rs  explain_hint_tests.rs  index_integration_tests.rs  index_performance_tests.rs  integration_tests.rs  property_tests.rs  speed_benchmarks.rs
mcp-server/: .gitignore  100_PERCENT_COMPLETE.md  C:\Users\Kalman\Desktop\bridge_log.txt  CLAUDE_CODE_SETUP.md  CLAUDE_DESKTOP_SETUP.md  Cargo.toml  LIVE_TEST_RESULTS.md  MCP_COMPLETE_IMPLEMENTATION.md  MCP_COMPLIANCE_REPORT.md  MCP_DOCJL_SPEC.md  MCP_INTEGRATION_STATUS.md  MCP_PROMPTS_GUIDE.md  MCP_WRAPPER_IMPLEMENTATION.md  PERSISTENCE_TESTING.md  QUICK_START.md  README.md  READY_TO_TEST.md  REAL_IRONBASE_IMPLEMENTATION.md  TODO_MCP_BALANCED_MVP.md  TODO_MCP_RESOURCES_PROMPTS.md  WINDOWS_SETUP.md  check_document_fields.py  check_sec3.py  claude_desktop_config.json  config.example.toml  config.toml  convert_nested_to_flat.py  demo_real_usage.py  docjl_storage.mlite.backup  import_docjl.py  import_test_doc.py  load_mk_manual_direct.py  mcp_bridge.py  mcp_bridge_simple.py  mcp_bridge_windows.py  mcp_claude_launcher.sh  mcp_stdio_wrapper.py  mk_manual_complete.json  mk_manual_final.json  mk_manual_normalized.json  (+29 more)
mcp-server/examples/: python_client.py  seed_database.rs
mcp-server/src/: adapter.rs  commands.rs  error.rs  lib.rs  main.rs  prompts.rs  tools.rs
mcp-server/src/adapters/: ironbase_adapter.rs  ironbase_real.rs  mod.rs
mcp-server/src/domain/: block.rs  block_new_types.rs  document.rs  label.rs  mod.rs  reference.rs  validation.rs
mcp-server/src/host/: audit.rs  mod.rs  security.rs
mcp-server/tests/: integration_test.rs  mcp_tests.rs
mongolite-core/src/: collection_core.rs  database.rs
mongolite-core/src/storage/: mod.rs
scripts/: run_dev_checks.sh
src/: collection.rs  error.rs  index.rs  lib.rs  query.rs  storage.rs
