[workspace]
resolver = "2"
members = [
    "ironbase-core",
    "bindings/python",
]
exclude = [
    "mcp-server",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
memmap2 = "0.9"
parking_lot = "0.12"
ahash = "0.8"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
crossbeam = "0.8"
bincode = "1.3"
tempfile = "3.8"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
