[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ironbase"
version = "0.3.0"
description = "IronBase - Lightweight embedded document database with MongoDB-compatible API, powered by Rust"
authors = [
    {name = "Petitan"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
keywords = ["database", "embedded", "document", "mongodb", "nosql", "rust", "ironbase"]

[project.urls]
Homepage = "https://github.com/petitan/IronBase"
Repository = "https://github.com/petitan/IronBase"
Documentation = "https://github.com/petitan/IronBase#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ironbase"
manifest-path = "bindings/python/Cargo.toml"
