[package]
name = "ironbase-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for IronBase database"
license = "MIT"

[[bin]]
name = "ironbase"
path = "src/main.rs"

[dependencies]
ironbase-core = { path = "../ironbase-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
