[package]
name = "ironbase-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure Rust core library for MongoLite - embedded document database"

[lib]
name = "ironbase_core"
crate-type = ["rlib"]

[dependencies]
# Workspace dependencies (pure Rust only, NO PyO3)
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
memmap2 = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
lazy_static = { workspace = true }
crc32fast = "1.4"  # For WAL checksums
lru = "0.12"       # For query result caching
regex = "1.10"     # For full $regex operator support

[dev-dependencies]
tempfile = { workspace = true }
proptest = "1.4"
# criterion = { version = "0.3", default-features = false }  # Disabled - needs Rust 1.80+

# [[bench]]
# name = "benchmarks"
# harness = false
