[package]
name = "mcp-ironbase-server"
version = "1.0.0"
edition = "2021"
authors = ["PeTitan Kft."]
description = "MCP server for IronBase document database"
license = "MIT"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
parking_lot = "0.12"

# HTTP server (using older compatible versions)
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
hyper = { version = "0.14", features = ["full"] }

# Configuration
toml = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"

# IronBase integration
ironbase-core = { path = "../ironbase-core" }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "mcp-ironbase-server"
path = "src/main.rs"

[lib]
name = "mcp_docjl"
path = "src/lib.rs"
