[package]
name = "ironbase"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for IronBase - Rust-powered embedded document database"

[lib]
name = "ironbase"
crate-type = ["cdylib"]

[dependencies]
# Core library
ironbase-core = { path = "../../ironbase-core" }

# Python binding
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

# Workspace dependencies
serde_json = { workspace = true }
